--- a/css/style1.css
+++ b/css/style1.css
@@ -1,6 +1,7 @@
 body{
-    background-image: url("../img/w.png");
+    background-image: url("img/w.png");
     background-repeat: no-repeat;
     background-attachment: fixed;
+        background-size: 1730px;
 }
 
